# src/auth/dto/login.dto.ts
@@ -1,7 +1,21 @@
-import { PickType } from '@nestjs/mapped-types';
-import { SignupDto } from 'src/auth/dto/signup.dto';
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsNotEmpty } from 'class-validator';
 
-export class LoginDto extends PickType(SignupDto, [
-  'email',
-  'password',
-] as const) {}
+export class LoginDto {
+  @ApiProperty({
+    description: 'User email',
+    example: 'test@gmail.com',
+    required: true,
+  })
+  @IsEmail()
+  @IsNotEmpty()
+  email: string;
+
+  @ApiProperty({
+    description: 'User password',
+    example: '123456',
+    required: true,
+  })
+  @IsNotEmpty()
+  password: string;
+}
