# src/companies/companies.controller.ts
@@ -14,7 +14,9 @@ import { UpdateCompanyDto } from './dto/update-company.dto';
 import { User } from '../decorator/user.decorator';
 import { IUser } from '../users/user.interface';
 import { ResponseMessage } from '../decorator/response-message.decorator';
+import { ApiTags } from '@nestjs/swagger';
 
+@ApiTags('Company')
 @Controller('companies')
 export class CompaniesController {
   constructor(private readonly companiesService: CompaniesService) {}
@@ -27,8 +29,8 @@ export class CompaniesController {
   @Get()
   @ResponseMessage('Get all companies')
   findAll(
-    @Query('page') page: number,
-    @Query('limit') limit: number,
+    @Query('current') page: number,
+    @Query('pageSize') limit: number,
     @Query() qs: string,
   ) {
     return this.companiesService.findAll(+page, +limit, qs);
